--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,14 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto navbar-ml">
             <a class="nav-link navy-text" href="{% url 'home.index' %}">Home</a>
-            <a class="nav-link navy-text" href="{#}">Login / Signup</a>
 
             <div class="vr navy-bg mx-2 d-none d-lg-block"></div>
+            {% if user.is_authenticated %}
+            <a class="nav-link navy-text" href="{% url 'logout' %}">Logout ({{user.username }})</a>
+            {% else %}
+            <a class="nav-link navy-text" href="{% url 'signup' %}">Sign Up</a>
+            <a class="nav-link navy-text" href="{% url 'login' %}">Login</a>
+            {% endif %}
 
           </div>
         </div>
