--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,8 +14,8 @@
     <div class="row mt-4">
       <div class="col mx-auto text-center mb-4">
         <div class="mt-3">
-        <a href="{#}" class="btn btn-lg navy-bg eggshell-text me-3">Find Food</a>
-        <a href="{#}" class="btn btn-lg navy-bg eggshell-text me-3">Post Food</a>
+        <a href="{% url 'listings' %}" class="btn btn-lg navy-bg eggshell-text me-3">Find Food</a>
+        <a href="{% url 'create_listing' %}" class="btn btn-lg navy-bg eggshell-text me-3">Post Food</a>
         <a href="#" class="btn btn-lg navy-bg eggshell-text me-3">About</a>
         </div>
       </div>
