--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
 
             <div class="vr navy-bg mx-2 d-none d-lg-block"></div>
             {% if user.is_authenticated %}
+            <a class="nav-link navy-text" href="{% url 'my_activity' %}">My Activity</a>
             <a class="nav-link navy-text" href="{% url 'logout' %}">Logout ({{user.username }})</a>
             {% else %}
             <a class="nav-link navy-text" href="{% url 'signup' %}">Sign Up</a>
