--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -48,17 +48,17 @@
       {% csrf_token %}
 
       <div class="mb-3">
-        <label for="id_username" class="form-label">Username:</label>
+        <label for="username" class="form-label">Username:</label>
         <input type="text" id="id_username" name="username" class="form-control" required minlength="3" maxlength="20">
       </div>
 
       <div class="mb-3">
-        <label for="id_email" class="form-label">Email Address:</label>
+        <label for="email" class="form-label">Email Address:</label>
         <input type="email" id="id_email" name="email" class="form-control" required>
       </div>
 
       <div class="mb-3">
-        <label for="id_password" class="form-label">Password:</label>
+        <label for="password" class="form-label">Password:</label>
         <input type="password" id="id_password" name="password" class="form-control" required minlength="8">
       </div>
 
