--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -52,25 +52,25 @@
       {% csrf_token %}
 
       <div>
-        <label for="id_username" class="form-label">Username:</label>
-        <input type="text" id="id_username" name="username" class="form-control"
+        <label for="username" class="form-label">Username:</label>
+        <input type="text" id="username" name="username" class="form-control"
                required minlength="3" maxlength="20" placeholder="3-20 characters">
       </div>
 
       <div>
-        <label for="id_email" class="form-label">Email Address:</label>
-        <input type="email" id="id_email" name="email" class="form-control" required>
+        <label for="email" class="form-label">Email Address:</label>
+        <input type="email" id="email" name="email" class="form-control" required>
       </div>
 
       <div>
-        <label for="id_password" class="form-label">Password:</label>
-        <input type="password" id="id_password" name="password" class="form-control"
+        <label for="password" class="form-label">Password:</label>
+        <input type="password" id="password" name="password" class="form-control"
                required minlength="8" placeholder="Minimum 8 characters">
       </div>
 
       <div>
-        <label for="id_confirm_password" class="form-label">Confirm Password:</label>
-        <input type="password" id="id_confirm_password" name="confirm_password" class="form-control"
+        <label for="confirm_password" class="form-label">Confirm Password:</label>
+        <input type="password" id="confirm_password" name="confirm_password" class="form-control"
                required minlength="8" placeholder="Re-enter your password">
       </div>
 
