--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto navbar-ml">
             <a class="nav-link navy-text" href="{% url 'home.index' %}">Home</a>
-            <a class="nav-link navy-text" href="{#}">Login / Signup</a>
+            <a class="nav-link navy-text" href="{#}">Login</a>
+            <a class="nav-link navy-text" href="{#}">Signup</a>
 
             <div class="vr navy-bg mx-2 d-none d-lg-block"></div>
 
