--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -63,14 +63,14 @@
       </div>
 
       <div>
-        <label for="password" class="form-label">Password:</label>
-        <input type="password" id="password" name="password" class="form-control"
+        <label for="password1" class="form-label">Password:</label>
+        <input type="password" id="password1" name="password1" class="form-control"
                required minlength="8" placeholder="Minimum 8 characters">
       </div>
 
       <div>
-        <label for="confirm_password" class="form-label">Confirm Password:</label>
-        <input type="password" id="confirm_password" name="confirm_password" class="form-control"
+        <label for="password2" class="form-label">Confirm Password:</label>
+        <input type="password" id="password2" name="password2" class="form-control"
                required minlength="8" placeholder="Re-enter your password">
       </div>
 
