--- a/food/templates/food/listings.html
+++ b/food/templates/food/listings.html
@@ -10,10 +10,27 @@
             <img src="{{ listing.image.url }}" class="card-img-top img-card-300" alt="{{ listing.title }}">
           {% endif %}
           <div class="card-body">
-            <h5 class="card-title">{{ listing.title }}</h5>
-            <p class="card-text">{{ listing.description|truncatewords:20 }}</p>
-            <p class="card-text"><small>Location: {{ listing.location }}</small></p>
-            <a href="{% url 'listing_detail' listing.pk %}" class="btn navy-bg eggshell-text btn-sm">View Details</a>
+            <h5 class="card-title" style="font-family: 'Frank Ruhl Libre', serif; font-weight: 600;">
+              {{ listing.title }}
+            </h5>
+
+            <p class="card-text" style="font-family: 'Frank Ruhl Libre', serif; font-weight: 400;">
+              {{ listing.description|truncatewords:20 }}
+            </p>
+
+            <p class="card-text" style="font-family: 'Frank Ruhl Libre', serif; font-weight: 400;">
+              <small style="font-family: 'Frank Ruhl Libre', serif; font-weight: 400;">
+                Location: {{ listing.location }}
+              </small>
+            </p>
+
+            <a href="{% url 'listing_detail' listing.pk %}" 
+              class="btn navy-bg eggshell-text btn-sm" 
+              style="font-family: 'Frank Ruhl Libre', serif; font-weight: 500;">
+              View Details
+            </a>
+
+
           </div>
         </div>
       </div>
