--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -19,7 +19,7 @@
   <!-- Our Idea -->
   <h2 class="text-center eggshell-text mt-5 mb-3">Our Idea</h2>
   <p class="navy-text fs-5 mx-auto" style="max-width: 800px;">
-    We built this platform to make it easy for students to share food that might otherwise go to waste. Maybe it’s groceries you won’t finish before a break, leftovers from a club meeting, or snacks you bought and never opened — whatever it is, someone else on campus could use it.
+    Co-founders Anna, Kristine, and Lily built this platform to make it easy for students to share food that might otherwise go to waste. Maybe it’s groceries you won’t finish before a break, leftovers from a club meeting, or snacks you bought and never opened — whatever it is, someone else on campus could use it.
   </p>
 
     <ul class="navy-text fs-5 mx-auto" 
@@ -78,7 +78,7 @@
   <!-- Join Us -->
   <h2 class="text-center eggshell-text mt-5">Join Us</h2>
     <p class="text-center navy-text fs-5 mt-5" style="font-weight: 400;">
-    Welcome to <strong>Your Website Name</strong> — where good food finds a second chance.
+    Welcome to <strong>Food Fairy</strong> — where good food finds a second chance.
     </p>
 
 
