--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -104,7 +104,7 @@
   <div class="container d-flex align-items-center flex-column pt-5">
     <div class="eggshell-text mb-4">
       <h1 class="mb-2" style="font-family: 'Fraunces', serif; font-weight: 700; font-size: 6rem;">
-        Welcome to ????
+        Welcome to Food Fairy!
       </h1>
       <h2 class="mb-0" style="font-family: 'Frank Ruhl Libre', serif; font-weight: 400; font-size: 1.75rem; font-style: normal;">
       Find Food. Post Food.
@@ -130,3 +130,4 @@
 
 
 {% endblock content %}
+
